# docs-maintainer

./: .gitignore  .replit  Dockerfile  README.md  llm_manager.py  main.py  pyproject.toml  sample_user_queries.md
docs/: data_storage_and_retrieval.md  deployment_and_scaling.md  framework_eval_methods.md
fastapi_backend/: .env.example  BACKEND_README.md  config.py  models.py  routes.py
fastapi_backend/helpers/: document_cleaner.py  llm_manager.py  query_transformation.py
fastapi_backend/helpers/prompts/: diff_suggestion_prompt.py
fastapi_backend/pipelines/: hybrid_rag_pipeline.py  vanilla_rag_pipeline.py
nextjs_frontend/: FRONTEND_README.md  README.md  package-lock.json  package.json
nextjs_frontend/app/: globals.css  layout.tsx  page.tsx
nextjs_frontend/app/chat/: page.tsx
nextjs_frontend/app/final-review/: page.tsx
nextjs_frontend/components/: ChatInterface.tsx  DocumentCard.tsx  QueryCard.tsx  QueryResults.tsx
nextjs_frontend/contexts/: ApprovedDocumentsContext.tsx  QueryQueueContext.tsx
nextjs_frontend/types/: index.ts
pipelines/: vanilla_rag_pipeline.py
